data/derived/sp14/progs/unify/prog1289.ml.out
Characters 98-124:
  | 0 -> buildSine((build(rand,d)))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
